--- a/weatherembed.html
+++ b/weatherembed.html
@@ -8,7 +8,7 @@
 
         body {
 
-            background-color:  #2f3437; <!-- set this value to match your background color (#2f3437 is the default "dark" theme color) -->
+            background-color:  #000000; <!-- set this value to match your background color (#2f3437 is the default "dark" theme color) -->
 
         }
 
