--- a/weatherembed.html
+++ b/weatherembed.html
@@ -26,7 +26,7 @@
 
 
 
-<a class="weatherwidget-io" href="https://forecast7.com/en/35d50n80d85/davidson/?unit=us" data-label_1="DAVIDSON" data-label_2="WEATHER" data-font="Consolas" data-icons="Climacons" data-days="5" data-theme="pure" data-textcolor="#000" >DAVIDSON WEATHER</a>
+<a class="weatherwidget-io" href="https://forecast7.com/en/35d50n80d85/davidson/?unit=us" data-label_1="DAVIDSON" data-font="Consolas" data-icons="Climacons" data-mode="Forecast" data-days="5" data-basecolor="#ffffff" >DAVIDSON</a>
 <script>
 !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
 </script>
